# responder

./: .dockerignore  Cargo.toml  Dockerfile  README.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/components/: SelectLanguage.vue  StatusField.vue
frontend/src/utils/: csrfPoc.js  index.js
src/: lib.rs  main.rs  response.rs
