[package]
name = "responder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
b64 = "0.4.0"
lazy_static = "1.5.0"
mime_guess = "2.0.5"
regex = "1.12.3"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_qs = "1.1.2"
serde_urlencoded = "0.7.1"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.3", features = ["make"] }
